--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="uyh-Ln-gqT" id="LD6-YP-gc8"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="xJd-hF-aQk"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="xJd-hF-aQk">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="aDX-xN-QZO">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="uyh-Ln-gqT" id="DeZ-2N-u9Y"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fwi-8c-tfX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
